# finance_tracker

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: test_pipeline.ipynb
scripts/: deploy.sh  setup_db.sql
src/: config.py  database.py  excel.py  handler.py  media.py  parser.py  reporting.py  webhook.py  whatsapp.py
tests/: test_database.py  test_parser.py  test_webhook.py
